argo/n8n-dev/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: n8n
spec:
  ingressClassName: haproxy
  rules:
    - host: auto8.dev.electgo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  name: http
  tls:
    - hosts:
        - auto8.dev.electgo.com
      secretName: auto8-dev-tls
